[gd_scene load_steps=12 format=3 uid="uid://c40ydk2p2uftv"]

[ext_resource type="Script" path="res://main/asset/text_box/text_box.gd" id="1_2xl8c"]
[ext_resource type="Theme" uid="uid://bex8yexjg5o6t" path="res://main/asset/theme/main_theme.tres" id="2_deu1r"]
[ext_resource type="Texture2D" uid="uid://bsk63unkr3ffi" path="res://main/asset/text_box/flicker_triangle.png" id="3_7rwoo"]
[ext_resource type="AudioStream" uid="uid://ebum0ksaltx7" path="res://main/asset/text_box/voices/girl.wav" id="4_wjqcy"]
[ext_resource type="AudioStream" uid="uid://d1c38ikp8ls41" path="res://main/asset/text_box/accept.wav" id="5_jseia"]

[sub_resource type="Animation" id="Animation_slaxp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/PanelContainer/FlickerIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer2/ChoiceIconA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer2/ChoiceIconB:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ldrtg"]
resource_name = "flicker"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/VBoxContainer/PanelContainer/FlickerIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_5p7xl"]
resource_name = "flicker_a"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%ChoiceIconA:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer2/ChoiceIconB:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qh62j"]
resource_name = "flicker_b"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%ChoiceIconB:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer2/ChoiceIconA:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_muvya"]
_data = {
"RESET": SubResource("Animation_slaxp"),
"flicker": SubResource("Animation_ldrtg"),
"flicker_a": SubResource("Animation_5p7xl"),
"flicker_b": SubResource("Animation_qh62j")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fm8xt"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 2.0
content_margin_bottom = 1.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.509804, 0.392157, 0.505882, 1)

[node name="TextBox" type="CanvasLayer"]
script = ExtResource("1_2xl8c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_muvya")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_deu1r")
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_deu1r")
theme_override_styles/panel = SubResource("StyleBoxFlat_fm8xt")

[node name="FlickerIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("3_7rwoo")
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="PersonIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
stretch_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 2
visible_characters_behavior = 1

[node name="ChoiceContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_fm8xt")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ChoiceContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
theme_override_constants/separation = 1

[node name="ChoiceIconA" type="TextureRect" parent="MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("3_7rwoo")
stretch_mode = 2

[node name="ChoiceIconB" type="TextureRect" parent="MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
texture = ExtResource("3_7rwoo")
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ChoiceA" type="Label" parent="MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "yes"

[node name="ChoiceB" type="Label" parent="MarginContainer/VBoxContainer/ChoiceContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "no"

[node name="VoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wjqcy")
volume_db = -14.0

[node name="AcceptPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_jseia")
volume_db = -3.0

[node name="MiniDelay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
